Jumbotron mobile image and text styled correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,28 @@ body {
 
 @media (max-width: 480px) {
     .jumbotron-container {
-        background: url('../images/jumbo-3.jpg') no-repeat top fixed;
+        background: none;
+        background: url('../images/mobile1.jpg') no-repeat top fixed;
+        padding-top: 40px;
     }
     }   
+
+@media (max-width: 480px) {
+    .jumbotron {  
+        margin-right: 7%;
+        margin-left: 7%;
+    }
+    } 
+
+@media (max-width: 480px) {
+    .jumbotron-container h1 {  
+        font-size: 50px;
+        
+    }
+    }  
+
+@media (max-width: 480px) {
+    .jumbotron-container p {  
+        font-size: 20px;
+    }
+    } 
